--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -140,7 +140,7 @@
             android:gravity="center"
             >
 
-            <TextView
+            <!--<TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
@@ -153,7 +153,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:background="#E8D6C8"/>
+                android:background="#E8D6C8"/>-->
 
             <TextView
                 android:layout_width="wrap_content"
