--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -413,6 +413,65 @@
         app:goodsDetail="@{goodsDetail}"
         />
 
+     
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:background="@color/white"
+        android:layout_marginTop="@dimen/margin_10"
+        >
+
+        <com.lzyyd.hsq.ui.RoundImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:layout_marginLeft="@dimen/margin_10"
+            app:image="@{goodsDetail.goodsImg}"
+            />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/margin_15"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{goodsDetail.storeName}"
+                android:textColor="#ff2d2d2d"
+                android:textSize="15sp"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="在线销售"
+                android:textColor="#ffb6b6b6"
+                android:layout_marginTop="@dimen/margin_5"
+                android:textSize="12sp"
+                />
+
+        </LinearLayout>
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:layout_marginRight="@dimen/margin_15"
+            android:text="@string/tv_more"
+            android:typeface="@{goodsDetailViewModel.setTypeFace()}"
+            />
+
+
+    </LinearLayout>
+
 
     <WebView
         android:id="@+id/wv_detail"
