--- a/app/src/main/res/layout/activity_orderdetail.xml
+++ b/app/src/main/res/layout/activity_orderdetail.xml
@@ -65,6 +65,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/ll_bottom"
         android:layout_below="@+id/titlebar">
 
         <LinearLayout
@@ -302,6 +303,7 @@
     </ScrollView>
 
     <LinearLayout
+        android:id="@+id/ll_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_10"
@@ -321,7 +323,6 @@
             />
 
     <RelativeLayout
-        android:id="@+id/rl_bottom"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@color/white"
