--- a/app/src/main/res/layout/adapter_store_cart.xml
+++ b/app/src/main/res/layout/adapter_store_cart.xml
@@ -17,7 +17,7 @@
             android:id="@+id/view_line"
             android:layout_width="match_parent"
             android:layout_height="15dp"
-            android:background="@color/line_bg"/>
+            android:background="@color/common_bg"/>
 
     <LinearLayout
         android:layout_width="match_parent"
