--- a/app/src/main/res/layout/activity_goodslist.xml
+++ b/app/src/main/res/layout/activity_goodslist.xml
@@ -19,39 +19,103 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    
-    
-    <LinearLayout
+
+
+    <RelativeLayout
+        android:id="@+id/rl_search_top"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:gravity="center_vertical"
+        android:layout_height="wrap_content"
+        >
+
+    <LinearLayout
+        android:id="@+id/ll_search_goods_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:visibility="gone"
+        android:layout_marginTop="@dimen/margin_10"
+        android:layout_marginLeft="@dimen/margin_15"
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/iv_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_back"
-            android:layout_marginLeft="10dp"/>
-
-
-        <EditText
-            android:layout_width="0dp"
-            android:layout_height="34dp"
-            android:layout_weight="1"
-            android:background="@drawable/ic_search_edittext"
+            android:src="@mipmap/ic_back_white"
             />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_shopping_cart"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
-
-
-
     </LinearLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/margin_28"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/margin_10"
+        android:layout_marginRight="@dimen/margin_15"
+        android:layout_marginTop="@dimen/margin_10"
+        android:layout_marginBottom="@dimen/margin_5"
+        android:layout_toLeftOf="@+id/tv_search"
+        android:layout_toRightOf="@+id/ll_search_goods_type"
+        android:background="@drawable/shape_seach"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/ic_search_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_10"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/ic_search_bg" />
+
+        <EditText
+            android:id="@+id/et_search"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/margin_5"
+            android:background="@null"
+            android:singleLine="true"
+            android:layout_toRightOf="@+id/ic_search_icon"
+            android:imeOptions="actionDone"
+            android:layout_centerVertical="true"
+            android:hint="搜索商品"
+            android:textSize="@dimen/textsize14" />
+
+        <LinearLayout
+            android:id="@+id/ll_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/margin_10"
+            android:visibility="gone"
+            android:background="@drawable/shape_search_layout"
+            android:layout_toRightOf="@+id/ic_search_icon"
+            >
+            <TextView
+                android:id="@+id/tv_search_et"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/textsize12"
+                android:layout_marginLeft="@dimen/margin_10"
+                android:layout_marginTop="@dimen/margin_3"
+                android:layout_marginBottom="@dimen/margin_3"
+                android:textColor="@color/white"
+                android:singleLine="true"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/textsize10"
+                android:layout_marginLeft="@dimen/margin_8"
+                android:layout_marginRight="@dimen/margin_5"
+                android:textColor="@color/white"
+                android:text="x"
+                android:singleLine="true"/>
+        </LinearLayout>
+    </RelativeLayout>
+
+    </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
