--- a/app/src/main/res/layout/fragment_chuangke.xml
+++ b/app/src/main/res/layout/fragment_chuangke.xml
@@ -2,6 +2,14 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+
+        <variable
+            name="chuangke"
+            type="com.lzyyd.hsq.viewmodel.ChuangkeViewModel" />
+
+    </data>
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
